add file upload api and refactor the module

--- a/springbootLearn/src/main/resources/application.properties
+++ b/springbootLearn/src/main/resources/application.properties
@@ -5,4 +5,14 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
+# file upload limit
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
+
+# static files location
+spring.resources.static-locations=classpath:/templates/
+# the uri must contain "static" to pattern the resources,
+# such as "http://localhost:8080/static/uploadForm.html"
+spring.mvc.static-path-pattern=/static/**
+
 spring.output.ansi.enabled=DETECT
